class_name LoadLevel
extends MarginContainer


func on_level1_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/levels/blueLevel/blue_level.tscn")
	

func on_level2_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/levels/blueLevel/blue_level_2.tscn")
	

func on_level3_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/levels/fire_theme/fire_level1.tscn")
	

func on_level4_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/levels/fire_theme/fire_level2.tscn")
	

func on_level5_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/levels/ilevel1.tscn")
	

func on_level6_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/levels/darkgreen2.tscn")
	

func on_level7_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/levels/yellow/yellow1.tscn")
	

func on_level8_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/levels/yellow/yellow_2.tscn")
